--- a/Develop/index.html
+++ b/Develop/index.html
@@ -30,6 +30,58 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <div class = "row my-row">
+        <div class = "col my-col col-a1 colorcode" id = "8"> 8am </div>
+        <div class = "col my-col col-a2 edit_cont" > </div>
+        <div class = "col my-col col-a3 edit_btn"> edit </div>
+    </div>
+    <div class = "row my-row" >
+        <div class = "col my-col col-b1 colorcode" id = "9"> 9am </div>
+        <div class = "col my-col col-b2 edit_cont">  </div>
+        <div class = "col my-col col-b3 edit_btn"> edit </div>
+    </div>
+    <div class = "row my-row" >
+        <div class = "col my-col col-c1 colorcode" id = "10" > 10am </div>
+        <div class = "col my-col col-c2 edit_cont">  </div>
+        <div class = "col my-col col-c3 edit_btn"> edit </div>
+        </div>
+    <div class = "row my-row">
+          <div class = "col my-col col-a1 colorcode" id = "11"> 11am </div>
+          <div class = "col my-col col-a2 edit_cont" > </div>
+          <div class = "col my-col col-a3 edit_btn"> edit </div>
+      </div>
+      <div class = "row my-row" >
+          <div class = "col my-col col-b1 colorcode" id = "12"> 12pm </div>
+          <div class = "col my-col col-b2 edit_cont">  </div>
+          <div class = "col my-col col-b3 edit_btn"> edit </div>
+      </div>
+      <div class = "row my-row" >
+          <div class = "col my-col col-c1 colorcode" id = "1" > 1pm </div>
+          <div class = "col my-col col-c2 edit_cont">  </div>
+          <div class = "col my-col col-c3 edit_btn"> edit </div>
+      </div>
+      <div class = "row my-row">
+        <div class = "col my-col col-a1 colorcode" id = "2"> 2pm </div>
+        <div class = "col my-col col-a2 edit_cont" > </div>
+        <div class = "col my-col col-a3 edit_btn"> edit </div>
+    </div>
+    <div class = "row my-row" >
+        <div class = "col my-col col-b1 colorcode" id = "3"> 3pm </div>
+        <div class = "col my-col col-b2 edit_cont">  </div>
+        <div class = "col my-col col-b3 edit_btn"> edit </div>
+    </div>
+    <div class = "row my-row" >
+        <div class = "col my-col col-c1 colorcode" id = "4" > 4pm </div>
+        <div class = "col my-col col-c2 edit_cont">  </div>
+        <div class = "col my-col col-c3 edit_btn"> edit </div>
+    </div>
+    <div class = "row my-row" >
+      <div class = "col my-col col-c1 colorcode" id = "5" > 5pm </div>
+      <div class = "col my-col col-c2 edit_cont">  </div>
+      <div class = "col my-col col-c3 edit_btn"> edit </div>
+  </div>
+      </div>
+    </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
